--- a/csss/styles-main.css
+++ b/csss/styles-main.css
@@ -2,7 +2,8 @@ html {
   box-sizing: border-box;
 }
 * {
-  margin: 0;
+  margin-left: 0;
+  margin-right: 0;
   padding: 0;
 }
 *,
@@ -12,23 +13,33 @@ html {
 }
 
 body {
+  height: 100vh;
 }
 .wrapper {
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  grid-gap: 10px;
+  grid-template-rows: auto auto 10%;
 }
 header {
-  grid-area: header;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  margin: auto;
 }
 .listItems {
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
 }
 .recipeListItem {
   border: solid 1px black;
   width: 200px;
   text-decoration: none;
-  justify-content: space-around;
+
   margin-left: 20px;
   text-align: center;
+  margin-bottom: 20px;
 
   /* display: inline-block; */
 }
@@ -39,6 +50,9 @@ header {
   padding: 5px 5px;
 }
 /*  Removes Bullet Points */
-ul {
-  list-style-type: none;
+
+section {
+  grid-column-start: 2;
+  grid-column-end: ;
+  grid-row-start: 2;
 }
