--- a/csss/styles-main.css
+++ b/csss/styles-main.css
@@ -16,20 +16,11 @@ body {
   height: 100vh;
 }
 .wrapper {
-  display: grid;
-  grid-template-columns: 25% 50% 25%;
-  grid-gap: 10px;
-  grid-template-rows: auto auto 10%;
-}
-header {
-  grid-column-start: 2;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  margin: auto;
-}
-.listItems {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.listItems {
   list-style-type: none;
 }
 .recipeListItem {
@@ -41,18 +32,47 @@ header {
   text-align: center;
   margin-bottom: 20px;
 
-  /* display: inline-block; */
+  display: inline-block;
+  border-radius: 5px;
+  background-color: rgba(223, 141, 54, 0.652);
 }
+
+.recipeListItem:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 .recipeLink {
-  color: red;
+  color: black;
   text-decoration: none;
   text-align: center;
   padding: 5px 5px;
+  font-size: 25px;
 }
 /*  Removes Bullet Points */
 
-section {
-  grid-column-start: 2;
-  grid-column-end: ;
-  grid-row-start: 2;
+.heading {
+}
+@media (min-width: 900px) {
+  .wrapper {
+    display: flex;
+  }
+}
+
+.wrapperTwo {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 50%;
+  border-radius: 5px;
+  justify-content: center;
+  align-content: center;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
