--- a/csss/recipe.css
+++ b/csss/recipe.css
@@ -16,12 +16,26 @@ body {
   margin: 20px;
   margin: 0% 10% 0% 10%;
 }
-.container {
+
+.wrapper {
   display: flex;
   border: solid 2px black;
   width: 50%;
 }
-.container,
+.wrapper .card {
+  display: flex;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 50%;
+  height: 30vh;
+  border-radius: 5px;
+  justify-content: center;
+  align-content: center;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.wrapper,
 header {
   display: flex;
   flex-direction: column;
@@ -29,23 +43,43 @@ header {
 header {
   align-items: center;
 }
-.container .step {
+.wrapper .step {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
+.wrapper .ingredient {
+  display: flex;
+  justify-content: center;
+}
+.wrapper .ingredient-list {
+  display: flex;
+  justify-content: center;
+}
+.wrapper .linkbox {
+  display: flex;
+
+  justify-content: center;
+  align-content: center;
+}
+
+.ingredient-list {
+}
 .step {
   align-items: center;
 }
-.container .ingredient {
-  display: flex;
-}
-.ingredient {
-}
-.container .ingredient-list {
-  display: flex;
-  flex-direction: column;
+li {
+  list-style-type: none;
 }
 
-.step {
+.link {
+  text-decoration: none;
+  color: black;
+  border: solid 2px black;
+  width: 100px;
+  align-content: center;
+  max-width: auto;
+  padding-left: 10px;
+  background-color: #fff;
 }
